	- [roms]  $2278: fixed window resizing which was disabled (but note that Windows resizing is an ugly hack because
			gtk_window_set_hints does not work properly under Windows).
	- [roms]  $2280: set 'Debug file with TiEmu' unsensitive when build in no-gdb mode
	- [roms]  $2282: added 'quick send' feature in -gdb version. This allows to by-pass the file selection box.
	- [roms]  $2298: make 'quick send' options persistent
	//- [roms]  $2299: make 'quick send' feature available in both versions. Popup menu reworked.

		=> released on 05/12/2006

- 07/07/2006, version 2.81b
	- [kevin] $2128: HW4 has 8 MB of FlashROM
	- [kevin] $2130: complete HW4 images to 8 MB
	- [kevin] $2136: fixed NULL dereference in filesel.c
	- [roms]  $2140: added TiGroup file support (in sending only)
	- [roms]  $2142: fixed wrong timeout value (2 variables, 1 (mis-)used)
	- [roms]  $2143: clean-up and overhaul in the progress bars
	- [roms]  $2144: updated to rely on ticalcs2 progress bars data-base
	- [roms]  $2146: fixed updating of third pbar counter. Fixed use of ticalcs2 pbar database.
	- [kevin] $2147: don't crash DCOP client program when running reset_calc through DCOP with the debugger running
	- [kevin] $2153: fixed warnings in TiEmu patches to GDB
	- [kevin] $2154: fixed warnings, fixed UAE to detect 64-bit integer types under glibc, fixed is_varname
	- [kevin] $2155: fixed warnings in the assembly-level debugger
	- [kevin] $2156: fixed more warnings and a few file descriptor leaks
	- [kevin] $2159: fixed "TIGCC" and "ticalc.org" bookmarks to use the respective official spelling
	- [kevin] $2162: only run Qt event hook (processing GTK+ events) when currently displaying a modal dialog
	                 (fixes DCOP hang after reset_calc with debugger running, due to the infinite loop protection)
	- [kevin] $2162: disable "Debug file with TiEmu" when the debugger is running
	- [kevin] $2162: added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite